objects/Registration_Template__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Company__c</fullName>
        <label>BLN Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>BLN Registration Templates</relationshipLabel>
        <relationshipName>BLN_Registration_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN Registration Templates</relationshipLabel>
        <relationshipName>BLN_Registration_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Header_Image_URL__c</fullName>
        <label>Header Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display Order</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Styles__c</fullName>
        <label>Styles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Image_URL__c</fullName>
        <label>Template Image URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Theme_Name__c</fullName>
        <label>Theme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Registration Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Template_Image_URL__c</columns>
        <columns>Header_Image_URL__c</columns>
        <columns>BLN_Events__c</columns>
        <columns>Theme_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Registration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Registration Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>